--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NDg1MTMxNjg4OTM0ODk5NzIy.DmsGQg.708iSOuY1mHtN7BoX09pMdTtcXM","client":"485131688934899722","tag":"!","case":"true","separator":"\\s+","ownerId":"396481787280228354"}
+{"token":"","tag":"!","case":"true","separator":"\\s+","ownerId":"396481787280228354"}
